feat: 댓글 조회 응답에 작성자 ID, 본인 여부, 대댓글 포함 기능 추가 (#77)
- 댓글 및 대댓글 응답에 writerId(작성자 ID), isMine(로그인 사용자 여부) 필드 추가
- /api/posts/{postId}/comments API에서 루트 댓글과 함께 1단계 대댓글 리스트(replies) 반환
- CommentResponseDTO 구조 변경 및 트리 형태의 JSON 응답 지원
- 프론트엔드에서 계층형 댓글 UI 렌더링 가능